#   XML::TreePP Changes

2006/03/09 (0.07)
    * Correct POD about parsehttp() method

2006/03/02 (0.06)
    * parsehttp() method now supports the HTTP::Lite pure Perl module as well.
    * Bug fix: xml_escape() call in hash_to_xml() method. (thanx to suVene)

2006/02/26 (0.04)
    * Correct POD about force_array option of new() method.
    * parsehttp() method returns a hash tree and xml source on array context.

2006/02/22 (0.03)
    + Changes

2006/02/21 (0.02)
    * Change encoding from ISO-8859-1 to UTF-8 is natively supported.
    + t/force_array.t t/parse.t t/parsefile.t t/parsehttp.t t/write.t
      t/index.rdf t/family.xml
    * Test scripts added.

2006/02/20  (0.01)
    * first release.

#   http://www.kawa.net/works/perl/treepp/treepp-e.html