@@ -7,5 +7,6 @@ WriteMakefile(
         'Test::More'        =>  '0',
 #       'LWP::UserAgent'    =>  '0',
 #       'HTTP::Lite'        =>  '0',
+#       'Jcode'             =>  '0', # on Perl 5.005/5.6.x
     },
 );
