@@ -44,7 +44,7 @@ SYNOPSIS
         print "Desc: ", $tree->{rss}->{channel}->{item}->[0]->{description}, "\n";
 
 DESCRIPTION
-    XML::TreePP module parses XML file and expand it for a hash tree. And
+    XML::TreePP module parses XML file and expands it for a hash tree. And
     also generate XML file from a hash tree. This is a pure Perl
     implementation. You can also download XML from remote web server like
     XMLHttpRequest object at JavaScript language.
@@ -128,33 +128,49 @@ EXAMPLES
     The special node name of "#text" is used because this elements has
     attribute(s) in addition to the text node.
 
-METHODS
-  $tpp = XML::TreePP->new( %attributes )
-    This method constructs a new "XML::TreePP" object. Optional attributes
-    are following:
+CONSTRUCTOR AND OPTIONS
+  $tpp = XML::TreePP->new();
+    This constructor method returns a new "XML::TreePP" object.
 
-  output_encoding => "UTF-8",
+  $tpp = XML::TreePP->new( %options );
+    Its first argument is a hash variable to set one or more options like
+    following:
+
+  $tpp->set( option_name => $option_value );
+    This method sets a option value for "option_name". If $option_value is
+    not defined, its option is deleted. Options below are available:
+
+  $tpp->set( output_encoding => "UTF-8" );
     You can define a encoding of xml file generated by write/writefile
     methods. On Perl 5.8.x and later, you can select it from every encodings
     supported by Encode.pm. On Perl 5.6.x or before with Jcode.pm, you can
     use "Shift_JIS", "EUC-JP", "ISO-2022-JP" and "UTF-8". The default value
     is "UTF-8".
 
-  force_array => [ "rdf:li", "item", "-xmlns" ],
+  $tpp->set( force_array => [ "rdf:li", "item", "-xmlns" ] );
     This option allows you to specify a list of element names which should
     always be forced into an array representation The default value is null,
     it means that context of the elements will determine to make array or to
     keep it scalar.
 
-  first_out => [ "link", "title", "-type" ],
+  $tpp->set( first_out => [ "link", "title", "-type" ] );
     This option allows you to specify a list of element/attribute names
     which should always appears at first on output XML code. The default
     value is null, it means alphabetical order is used.
 
-  last_out => [ "items", "item", "entry" ],
+  $tpp->set( last_out => [ "items", "item", "entry" ] );
     This option allows you to specify a list of element/attribute names
     which should always appears at last on output XML code.
 
+  $tpp->set( cdata_scalar_ref => 1 );
+    This option allows you to convert a cdata section into a reference for
+    scalar on parsing XML source. If this option is false, per default,
+    cdata section is converted into a scalar.
+
+  $tpp->get( "option_name" );
+    This method returns a current option value for "option_name".
+
+METHODS
   $tree = $tpp->parse( $source );
     This method reads XML source and returns a hash tree converted. The
     first argument is a scalar or a reference to a scalar.
@@ -163,23 +179,23 @@ METHODS
     This method reads a XML file and returns a hash tree converted. The
     first argument is a filename.
 
-  $tree = $tpp->parsefile( $method, $url, $body );
-    This method receive a XML file from a remote server via HTTP and returns
-    a hash tree converted. This medhot requires LWP::UserAgent module.
-    $method is a method of HTTP connection: GET/POST/PUT/DELETE $url is URI
-    of a XML file. $body is request body when you use POST method.
+  $tree = $tpp->parsehttp( $method, $url, $body );
+    This method receives a XML file from a remote server via HTTP and
+    returns a hash tree converted. $method is a method of HTTP connection:
+    GET/POST/PUT/DELETE $url is URI of a XML file. $body is request body
+    when you use POST method. LWP::UserAgent module or HTTP::Lite module is
+    required to fetch a file.
 
   $source = $tpp->write( $tree, $encode );
-    This method parse a hash tree and returns a XML source generated. $tree
+    This method parses a hash tree and returns a XML source generated. $tree
     is a referecen to a hash tree.
 
   $tpp->writefile( $file, $tree, $encode );
-    This method parse a hash tree and writes a XML source into a file. $file
-    is a filename to create. $tree is a referecen to a hash tree.
+    This method parses a hash tree and writes a XML source into a file.
+    $file is a filename to create. $tree is a referecen to a hash tree.
 
 AUTHOR
-    Yusuke Kawasaki, <u-suke [at] kawa.net>
-    http://www.kawa.net/works/perl/treepp/treepp-e.html
+    Yusuke Kawasaki, http://www.kawa.net/
 
 COPYRIGHT AND LICENSE
     Copyright (c) 2006 Yusuke Kawasaki. All rights reserved. This program is
